--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "fractional": "^1.0.0",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "regenerator-runtime": "^0.13.7",
